[gd_scene load_steps=3 format=3 uid="uid://bwo4f2ubim32d"]

[ext_resource type="Script" path="res://script/levels/kill_zone.gd" id="1_ywr0e"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_425lr"]

[node name="KillZone" type="Area2D"]
collision_layer = 2
script = ExtResource("1_ywr0e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("WorldBoundaryShape2D_425lr")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
